@@ -97,9 +97,12 @@ public class RegulatoryRegionApplicationService extends AbstractApplicationServi
         List<RegulatoryRegionConfigDTO> regulatoryRegionConfigDTOList = new ArrayList<>();
 
         try {
-            List<MutationEntity> entities = mutationsDomainService.getMutations(
-                    getTaskCode());
-            regulatoryRegionConfigDTOList.addAll(entities.stream().map(entity -> {
+            List<MutationEntity> unauthorizedEntities = mutationsDomainService.getUnauthorizedMutation(
+                    getTaskCode(), AUTHORIZED_N);
+            regulatoryRegionConfigDTOList.addAll(iRegulatoryRegionDomainService.getRegulatoryRegionCodes().stream()
+                    .map(entity -> regulatoryRegionAssembler.convertEntityToDto(entity))
+                    .collect(Collectors.toList()));
+            regulatoryRegionConfigDTOList.addAll(unauthorizedEntities.stream().map(entity -> {
                 String data = entity.getPayload().getData();
                 RegulatoryRegionConfigDTO regulatoryRegionConfigDTO = null;
                 try {
@@ -109,8 +112,11 @@ public class RegulatoryRegionApplicationService extends AbstractApplicationServi
                     ExceptionUtil.handleException(JSON_PARSING_ERROR);
                 }
                 return regulatoryRegionConfigDTO;
-            }).toList());
-
+            }).collect(Collectors.toList()));
+            regulatoryRegionConfigDTOList = regulatoryRegionConfigDTOList.stream().collect(
+                    Collectors.groupingBy(RegulatoryRegionConfigDTO::getRegRegionCode, Collectors.collectingAndThen(
+                            Collectors.maxBy(Comparator.comparing(RegulatoryRegionConfigDTO::getRecordVersion)),
+                            Optional::get))).values().stream().collect(Collectors.toList());
             fillTransactionStatus(transactionStatus);
         } catch (Exception exception) {
             fillTransactionStatus(transactionStatus, exception);
